chapter 4 - add conversation